--- a/src/index.css
+++ b/src/index.css
@@ -151,11 +151,14 @@ body {
 }
 
 .post-text {
-  word-wrap: break-word;
+  display: inline-block;
   padding: 8px 0;
   width: 100%;
   height: auto;
   overflow: hidden;
+  white-space: pre-wrap;
+  word-break: break-word;
+  overflow-wrap: break-word;
 }
 
 .post:hover {
