album showcase working

--- a/src/styles/album-stack.css
+++ b/src/styles/album-stack.css
@@ -8,6 +8,16 @@
   height: 18vw;
 }
 
+.album-cover {
+  transition: all 0.3s ease-in-out;
+  border-radius: 4px;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 11vw;
+  height: 11vw;
+}
+
 .album-card {
   display: grid;
   position: absolute;
@@ -18,11 +28,11 @@
   transition: all 0.3s ease-in-out;
   margin: auto;
   box-shadow: 0 2px 5px rgba(30, 30, 30, 0.25);
-  border-radius: 4px;
   background-color: rgb(226, 226, 226);
   width: 11vw;
   height: 11vw;
-  overflow: hidden;
+  overflow: visible;
+  content: '';
   color: #00000080;
   font-size: 10rem;
   font-family: sans-serif;
@@ -34,79 +44,82 @@
 }
 
 .album-card:nth-last-child(5) {
-  --x: calc(-100%);
+  --x: calc(-82%);
   transform: translate(var(--x), -65%);
 }
 
 .album-card:nth-last-child(4) {
-  --x: calc(-100%);
+  --x: calc(-82%);
   transform: translate(var(--x), -60%);
 }
 
 .album-card:nth-last-child(3) {
-  --x: calc(-100%);
+  --x: calc(-82%);
   transform: translate(var(--x), -55%);
 }
 
 .album-card:nth-last-child(2) {
-  --x: calc(-100%);
+  --x: calc(-82%);
   transform: translate(var(--x), -50%);
 }
 
 .album-card:nth-last-child(1) {
   --x: calc(75%);
-  transform: translate(var(--x), -50%);
+  transform: translate(var(--x), -55%);
 }
 
 .album-stack:hover {
   transition: all 0.5s ease-in-out;
 
   .album-card:nth-last-child(5) {
-    --x: calc(-100%);
+    --x: calc(-82%);
     transform: translate(var(--x), -80%);
   }
 
   .album-card:nth-last-child(5):hover {
-    --x: calc(-100%);
+    --x: calc(-82%);
     transform: translate(var(--x), -95%);
   }
 
   .album-card:nth-last-child(4) {
-    --x: calc(-100%);
+    --x: calc(-82%);
     transform: translate(var(--x), -60%);
   }
 
   .album-card:nth-last-child(4):hover {
-    --x: calc(-100%);
+    --x: calc(-82%);
     transform: translate(var(--x), -75%);
   }
 
   .album-card:nth-last-child(3) {
-    --x: calc(-100%);
+    --x: calc(-82%);
     transform: translate(var(--x), -40%);
   }
 
   .album-card:nth-last-child(3):hover {
-    --x: calc(-100%);
+    --x: calc(-82%);
     transform: translate(var(--x), -55%);
   }
 
   .album-card:nth-last-child(2) {
-    --x: calc(-100%);
+    --x: calc(-82%);
     transform: translate(var(--x), -20%);
   }
 
   .album-card:nth-last-child(2):hover {
-    --x: calc(-100%);
+    --x: calc(-82%);
     transform: translate(var(--x), -35%);
   }
 
-  .album-card:nth-last-child(1) {
-    /* transform: rotate(0deg) translate(0, -50%); */
+  .album-card:nth-last-child(1):hover {
+    .album-cover {
+      transform: scale(1.05);
+      transition: all 0.3s ease-in-out;
+    }
   }
 }
 
-.vinyl {
+.album-card:nth-last-child(1)>.vinyl {
   --x: calc(75%);
   display: block;
   position: absolute;
@@ -114,12 +127,13 @@
   left: 2.5%;
   transform: translate(var(--x), -50%);
   z-index: 0;
+  filter: drop-shadow(0 0 8px gray);
   animation: 5s linear spinThat infinite, 1s ease-out getOut 1s forwards;
-  box-shadow: 0 0 20px 4px rgba(0, 0, 0, 0.6);
   border-radius: 50%;
+  /* box-shadow: 0 0 20px 4px rgba(0, 0, 0, 0.6); */
   background-image: url('https://gallery.yopriceville.com/var/resizes/Free-Clipart-Pictures/Music-PNG/Gramophone_Vinyl_LP_Record_PNG_Transparent_Clip_Art_Image.png?m=1462983196');
   background-position: center;
-  background-size: 106% 106%;
+  background-size: cover;
   width: 95%;
   height: 95%;
   content: '';
@@ -128,8 +142,8 @@
     position: absolute;
     top: 2.5%;
     left: 2.5%;
-    opacity: 0.3;
-    z-index: 10;
+    opacity: 0.15;
+    z-index: -10;
     mix-blend-mode: screen;
     border-radius: 50%;
     background-image: url('http://www.designresourcebox.com/ths/diverse/blacktextures/82267467.jpg');
@@ -138,17 +152,25 @@
     height: 95%;
     content: '';
   }
+}
 
-  .print {
-    position: absolute;
-    top: 33%;
-    left: 33%;
-    box-shadow: inset 0 0 0 5px rgba(150, 150, 150, 0.5);
-    border-radius: 50%;
-    background-image: url('http://assets.teamrock.com/image/14d29742-c6f7-43f6-bbe1-6bf7b3b34c6f?w=800');
-    background-size: cover;
-    width: 34%;
-    height: 34%;
+.album-card:nth-last-child(1)>.vinyl.hide {
+  animation: getIn 1s forwards;
+}
+
+@keyframes getIn {
+  0% {
+    --x: calc(75%);
+    top: 2.5%;
+    left: 2.5%;
+    transform: translate(var(--x), 0%);
+  }
+
+  100% {
+    --x: calc(75%);
+    top: 2.5%;
+    left: 2.5%;
+    transform: translate(- var(--x), 0%);
   }
 }
 
@@ -180,7 +202,7 @@
   }
 
   100% {
-    transform: translate(calc(var(--x) + 15px), -50%) scale(0.85);
+    transform: translate(calc(var(--x) + -15vw), -50%) scale(0.85);
     z-index: -1;
   }
 }
