--- a/src/styles/book-stack.css
+++ b/src/styles/book-stack.css
@@ -28,6 +28,32 @@
   font-family: sans-serif;
 }
 
+.no-cover-book-card {
+  display: grid;
+  display: flex;
+  position: absolute;
+  top: 50%;
+  justify-content: center;
+  justify-content: center;
+  align-items: center;
+  align-items: center;
+  transform: translate(-50%, -50%);
+  transition: all 0.3s ease-in-out;
+  margin: auto;
+  box-shadow: 0 2px 5px rgba(30, 30, 30, 0.25);
+  border-radius: 2px 8px 8px 2px;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-color: rgb(227, 238, 238);
+  width: 7vw;
+  height: 11vw;
+  overflow: hidden;
+  color: #00000080;
+  font-size: 10rem;
+  font-family: serif;
+}
+
 .book-card:hover {
   scale: 1.05;
   transition: all 0.3s ease-in-out;
