--- a/src/index.css
+++ b/src/index.css
@@ -220,18 +220,26 @@ body {
 
 .post-username {
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 2px;
+  margin: 0;
+  margin-top: 2px;
+
+  p {
+    margin: 0;
+  }
 }
 
 .post-content {
   display: flex;
   flex-direction: column;
   justify-content: left;
+  gap: 8px;
 
   div {
     display: flex;
-    align-items: center;
-    min-height: 24px;
+    min-height: 18px;
   }
 }
 
@@ -241,9 +249,9 @@ body {
   justify-content: center;
   align-items: center;
   border: 0 dashed lightgray;
-  border-radius: 24px;
-  width: 24px;
-  height: 24px;
+  border-radius: 36px;
+  width: 36px;
+  height: 36px;
   overflow: hidden;
 
   img {
