--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,8 @@
 body {
   margin: 0;
   padding: 0;
+  max-width: 100vw;
+  overflow-x: hidden;
   scroll-behavior: smooth;
   font-size: 14px;
   font-family: Arial, Helvetica, sans-serif;
