--- a/src/index.css
+++ b/src/index.css
@@ -40,10 +40,10 @@ body {
 .ic-container.hidden-icon.profile-pic {
   position: absolute;
   z-index: 999;
-  background-color: #d3d3d300;
-  padding: 4px;
-  width: 8px;
-  height: 8px;
+  background-color: #d3d3d3d3;
+  padding: 2px;
+  width: 12px;
+  height: 12px;
   color: gray;
 }
 
@@ -109,15 +109,29 @@ body {
 }
 
 .profile-pic {
-  /* background-color: rgba(230, 230, 230, 0.5); */
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 0 dashed lightgray;
   border-radius: 8rem;
+  padding: 0;
   width: 8rem;
   height: 8rem;
   overflow: hidden;
+
+  img {
+    transition: all 0.3s ease-in-out;
+    width: auto;
+    height: auto;
+  }
+}
+
+.profile-pic img {
+  transition: all 0.3s ease-in-out;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  object-fit: cover;
 }
 
 .profile-text {
@@ -258,7 +272,7 @@ body {
 
   img {
     width: inherit;
-    height: inherit;
+    height: auto;
   }
 }
 
@@ -503,9 +517,19 @@ body {
 
   img {
     transition: all 0.3s ease-in-out;
-    width: 100%;
-    height: 100%;
+    width: auto;
+    height: auto;
   }
+}
+
+.glass.images img {
+  transition: all 0.3s ease-in-out;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  object-fit: cover;
+  /* Para cubrir todo el div manteniendo la relación de aspecto */
 }
 
 .glass.images:hover {
