--- a/src/index.css
+++ b/src/index.css
@@ -112,6 +112,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: all 0.3s ease-in-out;
   border-radius: 8rem;
   padding: 0;
   width: 8rem;
@@ -132,6 +133,15 @@ body {
   height: 100%;
   overflow: hidden;
   object-fit: cover;
+}
+
+.profile-pic:hover {
+  scale: 1.1;
+  filter: drop-shadow(0 .25rem .25rem lightgray);
+
+  img {
+    scale: 1.1;
+  }
 }
 
 .profile-text {
